<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:background="#D2B48C">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:gravity="center"
        android:text="@string/today_s_goals"
        android:textColor="#000000"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/goalButton1"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:background="#00FFFFFF"
        android:gravity="center"
        android:text="@string/click_to_set_goal_1"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title1" />

    <TextView
        android:id="@+id/goalButton3"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="4dp"
        android:background="#00FFFFFF"
        android:gravity="center"
        android:hapticFeedbackEnabled="false"
        android:text="@string/click_to_set_goal_3"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentTasks3" />

    <TextView
        android:id="@+id/currentTasks3"
        android:layout_width="388dp"
        android:layout_height="43dp"
        android:layout_marginTop="4dp"
        android:text="@string/goal_3"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goalButton2" />

    <TextView
        android:id="@+id/goalButton2"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:background="#00FFFFFF"
        android:gravity="center"
        android:text="@string/click_to_set_goal_2"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title2" />

    <TextView
        android:id="@+id/title1"
        android:layout_width="388dp"
        android:layout_height="43dp"
        android:layout_marginTop="32dp"
        android:text="@string/goal_1"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="388dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:text="@string/goal_2"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goalButton1" />

    <Button
        android:id="@+id/reset_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="29dp"
        android:background="#C5C5C5"
        android:shadowColor="#FFFFFF"
        android:text="@string/reset_goals"
        android:textAllCaps="true"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goalButton3"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>